SISProject/src/main/java/com/example/sisproject/global/error/code/ErrorCode.java
package com.example.sisproject.global.error.code;

public interface ErrorCode {
    int getStatus();
    int getCode();
    String getMessage();
}
